loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:4: error: ';' expected but 'else' found.
 else{
 ^